API 개발 reservation management session login

--- a/Signear/src/main/resources/application.yml
+++ b/Signear/src/main/resources/application.yml
@@ -4,4 +4,4 @@ spring:  profiles:    group:      prod:      dev:  datasource:    url: "jd
     store-type: "none"  jpa:    database: "mysql"
     database-platform: "org.hibernate.dialect.MySQL5InnoDBDialect"
     show-sql: true
-    open-in-view: false
+    open-in-view: falseserver:  servlet:    context-path: /  ssl:    enabled: false  port: 8080
