--- a/Signear/pom.xml
+++ b/Signear/pom.xml
@@ -14,6 +14,11 @@
 	<name>Signear</name>
 	<description>Signear project</description>
 	<packaging>jar</packaging>
+	<profiles><profile>
+      <id>prod</id>
+      <activation>
+      </activation>
+    </profile></profiles>
 	<properties>
 		<java.version>1.8</java.version>
 		<testcontainers.version>1.15.3</testcontainers.version>
@@ -27,6 +32,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-cache</artifactId>
 		</dependency>
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-tomcat</artifactId>
+		    <version>2.5.3</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -138,6 +149,13 @@
 		    <artifactId>springfox-swagger-ui</artifactId>
 		    <version>3.0.0</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/io.springfox/springfox-swagger2 -->
+		<dependency>
+		    <groupId>io.springfox</groupId>
+		    <artifactId>springfox-swagger2</artifactId>
+		    <version>3.0.0</version>
+		</dependency>
+
 
 		<dependency>
 			<groupId>org.springframework.batch</groupId>
