--- a/Signear/src/main/resources/application.yml
+++ b/Signear/src/main/resources/application.yml
@@ -1,7 +1,7 @@
-spring:  profiles:    group:      prod:      dev:  datasource:    url: "jdbc:mysql://3.35.204.9:3306/ear_project?serverTimezone=UTC&characterEncoding=UTF-8"    username: "ear_project_success"
+spring:  profiles:    active:    - prod   # - dev  datasource:    url: "jdbc:mysql://3.35.204.9:3306/ear_project?serverTimezone=UTC&characterEncoding=UTF-8"    username: "ear_project_success"
     password: "Ear_success1!"
     driver-class-name: "com.mysql.cj.jdbc.Driver"  session:
     store-type: "none"  jpa:    database: "mysql"
     database-platform: "org.hibernate.dialect.MySQL5InnoDBDialect"
     show-sql: true
-    open-in-view: falseserver:  servlet:    context-path: /  ssl:    enabled: false  port: 8080
+    open-in-view: false
