api 추가 SPRING SECURITY 로그인 구현 CORS 적용

--- a/Signear/src/main/resources/application-dev.yml
+++ b/Signear/src/main/resources/application-dev.yml
@@ -1,3 +1,12 @@
+server:
+  servlet:
+    context-path: /
+  ssl:
+    enabled: false
+  port: 8080
+
 spring:
-  profiles:
-    active: dev
+  redis:
+    host: localhost
+    password: password
+    port: 6379
