--- a/Signear/pom.xml
+++ b/Signear/pom.xml
@@ -35,7 +35,6 @@
 		<dependency>
 		    <groupId>org.springframework.boot</groupId>
 		    <artifactId>spring-boot-starter-tomcat</artifactId>
-		    <version>2.5.3</version>
 		</dependency>
 
 		<dependency>
@@ -93,6 +92,10 @@
 		<dependency>
 			<groupId>org.springframework.integration</groupId>
 			<artifactId>spring-integration-jdbc</artifactId>
+		</dependency>
+		<dependency>
+		    <groupId>org.springframework.session</groupId>
+		    <artifactId>spring-session-data-redis</artifactId>
 		</dependency>
 	    <dependency>
 	        <groupId>com.h2database</groupId>
