--- a/Signear/src/main/resources/application-prod.yml
+++ b/Signear/src/main/resources/application-prod.yml
@@ -6,15 +6,20 @@ server:
   port: 8086
 spring:
   datasource:
-    url: "jdbc:mysql://3.35.204.9:3306/ear_project?serverTimezone=UTC&characterEncoding=UTF-8"
-    username: "ear_project_success"
-    password: "Ear_success1!"
+    url: "jdbc:mysql://db-6t4fg.pub-cdb.ntruss.com/eardb?serverTimezone=UTC&characterEncoding=UTF-8"
+    username: "sullivan_db"
+    password: "sullivan2w3e4r!"
     driver-class-name: "com.mysql.cj.jdbc.Driver"
 
   jpa:
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
     open-in-view: false
     show-sql: true
+
+  redis:
+    host: localhost
+    password: password
+    port: 6379
 
 logging:
   level:
